***** JKCEMU Version 0.5 vom 01.04.2009 *****
    * Emulation des C-80 hinzugefügt
    * Emulation des LLC2 hinzugefügt
    * Emulation des MKX-80032 (Aprilscherz) hinzugefügt
    * Emulation des Poly-Computers 880 hinzugefügt
    * Emulation des VCS-80 hinzugefügt
    * BCS3: S/P-BASIC 3.3 durch die finale Version ersetzt
    * Extrahieren von Text aus der Bildschirmausgabe: Grafik- und sonstige
      nicht druckbare Zeichen werden in Unterstriche gewandelt.
    * Sound: Ein göffneter Sound-Kanal wird bei Änderung der Taktfrequenz zwar
      wie bisher geschlossen, aber sofort automatisch wieder geöffnet, sofern
      die Emulation weiterhin auf eine feste Taktfrequenz begrenzt ist.
    * Rechner: spezielle Syntax für Binärzahlen eingeführt ($...), dafür
      Wegfall der Einstellknöpfe für die Zahlenbasis
    * Menüpunkt für direkte Hilfe zum emulieren System hinzugefügt
    * Hilfe korrigiert
    * Bugfixes:
        o AC1: Systemfunktionen wurden teilweise falsch reassembliert
        o LC80.2-ROM-Image korrigiert

Originated-by: jkcemu-src-0.5.zip
Originated-md5: 7e205067daada13d07c553d53fdfe66e
Originated-URL: http://www.jens-mueller.org/jkcemu/download/jkcemu-src-0.5.zip

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/src/help/bcs3.htm
+++ b/src/help/bcs3.htm
@@ -71,7 +71,8 @@
 	  da der Speicher bereits initialisiert ist.
 	  <br><br>
       <li>Bei einem Kaltstart m&uuml;ssen Sie als erstes
-	  die Anzahl der sichtbaren Zeilen (4 bis 29) eingeben
+	  die Anzahl der sichtbaren Zeilen
+	  (BASIC-SE 3.1: 4 bis 29, S/P-BASIC 3.3: 4 bis 28) eingeben
 	  und <em>ENTER</em> bet&auml;tigen,
 	  bevor Sie in die BASIC-Eingabeaufforderung gelangen.
 	  <br><br>
