--- a/src/help/emusys.htm
+++ b/src/help/emusys.htm
@@ -4,11 +4,15 @@
     <ul>
       <li><a href="ac1.htm">AC1</a>
       <li><a href="bcs3.htm">BCS3</a>
+      <li><a href="c80.htm">C-80</a>
       <li><a href="hemc.htm">H&uuml;bler/Evert-MC</a>
       <li><a href="hgmc.htm">H&uuml;bler-Grafik-MC</a>
       <li><a href="kc85.htm">HC900, KC85/2...4</a>
       <li><a href="kramermc.htm">Kramer-MC</a>
-      <li><a href="lc80.htm">LC80</a>
+      <li><a href="lc80.htm">LC-80</a>
+      <li><a href="llc2.htm">LLC2</a>
+      <li><a href="poly880.htm">Poly880</a>
+      <li><a href="vcs80.htm">VCS-80</a>
       <li><a href="z1013.htm">Z1013</a>
       <li><a href="z9001.htm">Z9001, KC85/1, KC87</a>
     </ul>
