--- a/src/help/home.htm
+++ b/src/help/home.htm
@@ -28,11 +28,12 @@
       <li><a href="audio.htm">Audio/Kassette</a></li>
       <li><a href="floppydisk.htm">Diskettenlaufwerke</a></li>
       <li><a href="gide.htm">Festplatten</a></li>
-      <li><a href="joystick.htm">Spielhebel (Joysticks)</a></li>
+      <li><a href="joystick.htm">Joysticks (Spielhebel)</a></li>
       <li><a href="print.htm">Drucken</a></li>
       <li><a href="plotter.htm">Plotter</a></li>
       <li><a href="kcnet.htm">Netzwerk</a></li>
       <li><a href="usb.htm">USB-Anschluss</a></li>
+      <li><a href="fullscreen.htm">Vollbildmodus</a></li>
       <li><a href="tips.htm">Tipps &amp; Tricks</a></li>
      </ul>
     </td>
