--- a/src/help/index.htm
+++ b/src/help/index.htm
@@ -324,6 +324,7 @@
  <h2><a name="v">V</a></h2>
   <ul>
    <li><a href="vcs80.htm">VCS80</a></li>
+   <li><a href="fullscreen.htm">Vollbildmodus</a></li>
   </ul>
   <br/>
 
