--- a/src/help/joystick.htm
+++ b/src/help/joystick.htm
@@ -1,9 +1,9 @@
 <html>
 <body>
- <h1>Spielhebel (Joysticks)</h1>
+ <h1>Joysticks (Spielhebel)</h1>
   Der Emulator unterst&uuml;tzt Joysticks unter den Betriebssystemen
   Windows und Linux (jeweils 32 und 64&nbsp;Bit).
-  Wenn das emulierte System im Original &uuml;ber Spielhebel-Anschl&uuml;sse
+  Wenn das emulierte System im Original &uuml;ber Joystick-Anschl&uuml;sse
   verf&uuml;gt, die von JKCEMU auch emuliert werden,
   dann k&ouml;nnen diese emulierten Spielhebel mit den am Emulatorrechner
   angeschlossenen Joysticks bedient werden.
