--- a/src/help/loadsavebasic.htm
+++ b/src/help/loadsavebasic.htm
@@ -142,7 +142,7 @@
      <ul>
       <li>
        <a href="fileformats.htm#headersave">Headersave-Datei</a>
-       mit Dateityp <em>B</em> und Anfangsadresse 60F7
+       mit Dateityp <em>B</em> und Anfangsadresse 6000
       </li>
      </ul>
     </td>
