--- a/src/help/pcm.htm
+++ b/src/help/pcm.htm
@@ -61,9 +61,9 @@
  <br/>
 
  <h3><a name="ram">1.1. RAM-B&auml;nke</a></h3>
-  Die RAM-B&auml;nke&nbsp;1 und 2 liegen hintereinander
-  in der RAM-Floppy&nbsp;1.
-  Das ist deshalb sinnvoll, da das im ROM enthaltene BIOS
+  Die RAM-B&auml;nke&nbsp;1 und 2 des emulierten PC/M
+  liegen im JKCEMU hintereinander in der RAM-Floppy&nbsp;1.
+  Das ist sinnvoll, da das im ROM enthaltene BIOS
   diese beiden B&auml;nke ebenfalls als eine RAM-Floppy verwendet.
   Somit kann die RAM-Floppy mit den Emulatorfunktionen
   geladen und gespeichert werden.
@@ -159,7 +159,7 @@
        Der Einfachheit halber kann JKCEMU das BDOS auch automatisch
        bei jedem RESET laden,
        wenn Sie es in den <a href="settings.htm">Einstellungen</a>
-       so festgelegen.<br/>
+       so festlegen.<br/>
       </li>
       <li>
        Beim Floppy-Disk-System wird zuerst versucht,
