--- a/src/help/tools/basicc.htm
+++ b/src/help/tools/basicc.htm
@@ -17,12 +17,11 @@
    <li><a href="basicc/datatypes.htm">Datentypen</a></li>
    <li><a href="basicc/expressions.htm">Ausdr&uuml;cke</a></li>
    <li><a href="basicc/instructions.htm">Anweisungen</a></li>
-   <li>
-    <a href="basicc/functions.htm">Funktionen und Konstanten</a>
-   </li>
+   <li><a href="basicc/functions.htm">Funktionen und Systemvariablen</a></li>
    <li>
     <a href="basicc/usersubs.htm">Benutzerdefinierte Funktionen und Prozeduren</a>
    </li>
+   <li><a href="basicc/constants.htm">Konstanten</a></li>
    <li>
     <a href="basicc/strings.htm">Zeichenkettenverarbeitung</a>
    </li>
