--- a/src/help/tools/basicc/structure.htm
+++ b/src/help/tools/basicc/structure.htm
@@ -66,8 +66,8 @@
   </table>
  <br/>
   Alle Schleifen k&ouml;nnen mit der
-  <a href="instructions.htm#exit">EXIT</a>-Anweisung
-  (vorzeitig) verlassen werden.
+  <a href="instructions.htm#exit">EXIT</a>-Anweisung vorzeitig
+  verlassen werden.
  <br/><br/>
   Eine Schleife l&auml;sst sich auch mit der aus dem klassischen BASIC
   her bekannten <a href="instructions.htm#goto">GOTO</a>-Anweisung
