--- a/src/help/z1013.htm
+++ b/src/help/z1013.htm
@@ -10,7 +10,7 @@
      <li><a href="z1013.htm#peters">1.3. Peters-Platine</a></li>
      <li><a href="z1013.htm#mega">1.4. Mega-ROM-Modul</a></li>
      <li><a href="z1013.htm#printer">1.5. Drucker</a></li>
-     <li><a href="z1013.htm#joystick">1.6. Spielhebel (Joysticks)</a></li>
+     <li><a href="z1013.htm#joystick">1.6. Joysticks</a></li>
      <li><a href="z1013.htm#fdc">1.7. Floppy-Disk-Modul</a></li>
      <li>
       <a href="z1013.htm#usb">1.8. USB-Anschluss (Vinculum VDIP Modul)</a>
@@ -64,7 +64,7 @@
        <li>KC-BASIC-Modul</li>
        <li><a href="z1013.htm#mega">Mega-ROM-Modul</a></li>
        <li><a href="z1013.htm#printer">Drucker</a></li>
-       <li><a href="z1013.htm#joystick">Spielhebel (Joysticks)</a></li>
+       <li><a href="z1013.htm#joystick">Joysticks</a></li>
        <li>
 	Zwei&nbsp;<a href="ramfloppy.htm">RAM-Floppies</a>
 	nach <em>Mikroprozessortechnik</em>
@@ -234,9 +234,9 @@
   an den aktuellen Druckauftrag anh&auml;ngt.
  <br/><br/>
 
- <h3><a name="joystick">1.6. Spielhebel (Joysticks)</a></h3>
-  F&uuml;r den Z1013 wurden mehrere Hardware-Varianten f&uuml;r
-  den Anschluss von Joysticks ver&ouml;ffentlicht
+ <h3><a name="joystick">1.6. Joysticks (Spielhebel)</a></h3>
+  F&uuml;r den Z1013 wurden mehrere Hardware-Varianten f&uuml;r den
+  Anschluss von <a href="joystick.htm">Joysticks</a> ver&ouml;ffentlicht
   sowie eine entsprechende Software-Schnittstelle definiert.
   JKCEMU kann sowohl die drei g&auml;ngigen Hardware-Varianten
   als auch die Software-Schnittstelle emulieren.
@@ -246,8 +246,8 @@
   Manche Programme fragen direkt das Anwendertor ab,
   an dem die Spielhebel angeschlossen sind.
   In dem Fall m&uuml;ssen Sie in den
-  <a href="settings.htm">Einstellungen</a> im Bereich <em>Z1013</em>,
-  Unterseite <em>Anwendertor</em>,
+  <a href="settings.htm">Einstellungen</a> im Bereich <em>Z1013</em>
+  im Reiter <em>Anwendertor</em>
   die richtige Joystick-Hardware ausw&auml;hlen.
  <br/><br/>
   Benutzt dagegen das Spiel- bzw. Anwendungsprogramm
