--- a/src/help/z9001.htm
+++ b/src/help/z9001.htm
@@ -372,24 +372,15 @@
    <tr><th>Dateiname</th><th>Bedeutung</th></tr>
    <tr>
     <td>uz80c.com</td>
-    <td>
-     Einschalten der 80-Zeichen-Darstellung (Farbe)
-     und Umschalten des Zeichensatzes
-    </td>
+    <td>Einschalten der 80-Zeichen-Darstellung (Farbe)</td>
    </tr>
    <tr>
     <td>uz80bw.com</td>
-    <td>
-     Einschalten der 80-Zeichen-Darstellung (schwarz/wei&szlig;)
-     und Umschalten des Zeichensatzes
-    </td>
+    <td>Einschalten der 80-Zeichen-Darstellung (schwarz/wei&szlig;)</td>
    </tr>
    <tr>
     <td>uz80ex.com</td>
-    <td>
-     Ausschalten der 80-Zeichen-Darstellung
-     und Umschalten (Zur&uuml;ckschalten) des Zeichensatzes
-    </td>
+    <td>Ausschalten der 80-Zeichen-Darstellung</td>
    </tr>
   </table>
  <br/><br/>
