--- a/src/help/tools/basicc/strings.htm
+++ b/src/help/tools/basicc/strings.htm
@@ -31,8 +31,8 @@
   Die L&auml;ngenbegrenzung gilt nicht f&uuml;r String-Literale,
   die Funktionen <a href="functions.htm#instr">INSTR</a>,
   <a href="functions.htm#len">LEN</a>,
-  <a href="functions.htm#ltrim">LTRIM$</a> und
-  <a href="functions.htm#memstr">MEMSTR$</a> sowie f&uuml;r die Ausgabe
+  <a href="functions.htm#ltrim$">LTRIM$</a> und
+  <a href="functions.htm#memstr$">MEMSTR$</a> sowie f&uuml;r die Ausgabe
   von Zeichenketten.
  <br/><br/>
 
@@ -62,39 +62,10 @@
  <br/><br/>
 
  <h3><a name="func">String-Funktionen</a></h3>
-  Folgende Funktionen dienen der Verarbeitung von bzw. der Arbeit mit
-  Zeichenketten:
- <br/>
-  <ul>
-   <li><a href="functions.htm#asc"><tt>ASC</tt></a></li>
-   <li><a href="functions.htm#bin"><tt>BIN$</tt></a></li>
-   <li><a href="functions.htm#chr"><tt>CHR$</tt></a></li>
-   <li><a href="functions.htm#hex"><tt>HEX$</tt></a></li>
-   <li><a href="functions.htm#inchar"><tt>INCHAR$</tt></a></li>
-   <li><a href="functions.htm#inkey"><tt>INKEY$</tt></a></li>
-   <li><a href="functions.htm#instr"><tt>INSTR</tt></a></li>
-   <li><a href="functions.htm#left"><tt>LEFT$</tt></a></li>
-   <li><a href="functions.htm#len"><tt>LEN</tt></a></li>
-   <li><a href="functions.htm#lower"><tt>LOWER$</tt></a></li>
-   <li><a href="functions.htm#ltrim"><tt>LTRIM$</tt></a></li>
-   <li><a href="functions.htm#memstr"><tt>MEMSTR$</tt></a></li>
-   <li><a href="functions.htm#mid"><tt>MID$</tt></a></li>
-   <li><a href="functions.htm#mirror"><tt>MIRROR$</tt></a></li>
-   <li><a href="functions.htm#right"><tt>RIGHT$</tt></a></li>
-   <li><a href="functions.htm#rtrim"><tt>RTRIM$</tt></a></li>
-   <li><a href="functions.htm#space"><tt>SPACE$</tt></a></li>
-   <li><a href="functions.htm#str"><tt>STR$</tt></a></li>
-   <li><a href="functions.htm#string"><tt>STRING$</tt></a></li>
-   <li><a href="functions.htm#target_id"><tt>TARGET_ID$</tt></a></li>
-   <li><a href="functions.htm#trim"><tt>TRIM$</tt></a></li>
-   <li><a href="functions.htm#upper"><tt>UPPER$</tt></a></li>
-   <li><a href="functions.htm#val"><tt>VAL</tt></a></li>
-  </ul>
- <br/>
   Der Begriff String-Funktion hat eine Doppelbedeutung.
   In semantischer Hinsicht ist damit eine Funktion gemeint,
-  bei der Zeichenketten eine Rolle spielen.
-  Das betrifft alle oben aufgef&uuml;hrten Funktionen.
+  bei der Zeichenketten eine Rolle spielen, d.h.,
+  bei der eine Zeichenkette &uuml;bergeben oder zur&uuml;ckgeliefert wird.
   In syntaktischer Hinsicht sind nur das String-Funktionen,
   die eine Zeichenkette zur&uuml;ckliefern.
   Diese Funktionen tragen als letztes Zeichen ein $ in ihrem Namen.
@@ -122,18 +93,22 @@
   Folgende Funktionen verwenden den internen String-Puffer:
  <br/>
   <ul>
-   <li><a href="functions.htm#bin"><tt>BIN$</tt></a></li>
-   <li><a href="functions.htm#chr"><tt>CHR$</tt></a></li>
-   <li><a href="functions.htm#hex"><tt>HEX$</tt></a></li>
-   <li><a href="functions.htm#left"><tt>LEFT$</tt></a></li>
-   <li><a href="functions.htm#lower"><tt>LOWER$</tt></a></li>
-   <li><a href="functions.htm#mid"><tt>MID$</tt></a></li>
-   <li><a href="functions.htm#mirror"><tt>MIRROR$</tt></a></li>
-   <li><a href="functions.htm#rtrim"><tt>RTRIM$</tt></a></li>
-   <li><a href="functions.htm#space"><tt>SPACE$</tt></a></li>
-   <li><a href="functions.htm#string"><tt>STRING$</tt></a></li>
-   <li><a href="functions.htm#trim"><tt>TRIM$</tt></a></li>
-   <li><a href="functions.htm#upper"><tt>UPPER$</tt></a></li>
+   <li><a href="functions.htm#bin$"><tt>BIN$</tt></a></li>
+   <li><a href="functions.htm#chr$"><tt>CHR$</tt></a></li>
+   <li><a href="functions.htm#hex$"><tt>HEX$</tt></a></li>
+   <li><a href="functions.htm#host_by_name$"><tt>HOST_BY_NAME$</tt></a></li>
+   <li><a href="functions.htm#input$"><tt>INPUT$</tt></a></li>
+   <li><a href="functions.htm#left$"><tt>LEFT$</tt></a></li>
+   <li><a href="functions.htm#local_addr$"><tt>LOCAL_ADDR$</tt></a></li>
+   <li><a href="functions.htm#lower$"><tt>LOWER$</tt></a></li>
+   <li><a href="functions.htm#mid$"><tt>MID$</tt></a></li>
+   <li><a href="functions.htm#mirror$"><tt>MIRROR$</tt></a></li>
+   <li><a href="functions.htm#remote_addr$"><tt>REMOTE_ADDR$</tt></a></li>
+   <li><a href="functions.htm#rtrim$"><tt>RTRIM$</tt></a></li>
+   <li><a href="functions.htm#space$"><tt>SPACE$</tt></a></li>
+   <li><a href="functions.htm#string$"><tt>STRING$</tt></a></li>
+   <li><a href="functions.htm#trim$"><tt>TRIM$</tt></a></li>
+   <li><a href="functions.htm#upper$"><tt>UPPER$</tt></a></li>
   </ul>
  <br/>
   Wird die Beschr&auml;nkung bzgl. der Schachtellung
