***** JKCEMU Version 0.9.8.1 vom 27.12.2021 *****
    * Bugfixes:
        o In einer Umgebung, die SystemTray nicht unterstützt, stürzte
          JKCEMU beim Start mit einer NullPointerException ab.
        o Bilddatei laden (Bildbetrachter, Datei-Browser): Bilddateien
          mit ungültigen bzw. nicht unterstützen Metadaten ließen sich
          nicht laden.

Originated-by: jkcemu-src-0.9.8.1.zip
Originated-md5: ffb50121b882bc7ca120b89672d320f1
Originated-URL: http://www.jens-mueller.org/jkcemu/download/jkcemu-src-0.9.8.1.zip

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/src/help/tradenames.htm
+++ b/src/help/tradenames.htm
@@ -3,7 +3,7 @@
  <h1>Markennamen</h1>
   In der Programmoberfl&auml;che und in der Hilfe werden
   an einigen Stellen Markennamen genannt (z.B. Amstrad, Apple, Commodore,
-  CP/M, Intel, Linux, Mac, Robotron, Sinclair, Solaris, WordStar, Zilog).
+  CP/M, Intel, Linux, Mac, Robotron, Sinclair, WordStar, Zilog).
   Diese Namen sind registrierte Markennamen der jeweiligen Markeninhaber
   und werden hier entsprechend dem deutschen und europ&auml;ischen
   Markenrecht nur zum Zweck der Nennung der bzw. des Verweises auf die
@@ -12,4 +12,3 @@
   Alle durch das Markenrecht gegebenen Rechte werden respektiert.
 </body>
 </html>
-
